--- a/theend.tex
+++ b/theend.tex
@@ -1,8 +1,35 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.3 2009/07/14 14:05:11 ith Exp $
+% $Id: theend.tex,v 1.4 2009/11/07 17:16:58 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: theend.tex,v 1.3 2009/07/14 14:05:11 ith Exp $}
-\chapter{Conclusions}
+\renewcommand{\CVSrevision}%
+{\version$Id: theend.tex,v 1.4 2009/11/07 17:16:58 ith Exp $}
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\chapter{Final Conclusions}
 \label{ch:conclusions}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+
+As the number of cosmological models grows, the need to constrain them is also
+increasing. At the same time, the quantity and quality of observational data are
+advancing. There now exists the opportunity to go beyond linear statistical analyses
+and confront the predictions of models with observational data from the non-linear
+regime. In this thesis both analytic and numerical methods have been used to
+constrain inflationary models.
+
+The framework used was the Friedmann-Robertson-Walker universe, which was reviewed
+in Chapter~\ref{ch:introduction}. During the accelerated expansion of the
+inflationary period, quantum fluctuations seeded energy density variations which
+gave rise to the diverse structure in the universe. First order perturbation theory
+was introduced to describe these fluctuations. Using the Bunch-Davies vacuum initial
+conditions, observational predictions for the inflationary scenario were made.
+
+The main observable quantities are the power spectrum of scalar perturbations, its
+spectral index, and the ratio of tensor to scalar perturbations. In addition to
+these the degree of departure of the perturbations from purely Gaussian statistics
+was considered in the local and equilateral cases.
