Changed language around general bound.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.60 2009/11/06 12:36:39 ith Exp $
+% $Id: dbi.tex,v 1.61 2009/11/09 13:23:06 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.60 2009/11/06 12:36:39 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.61 2009/11/09 13:23:06 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -765,11 +765,11 @@ the generalized model (\ref{eq:genaction-dbi}) would be more involved,
 since the CMB normalization (\ref{eq:observef1}) only 
 directly constrains the function 
 $f_1 (\varphi )$ and this may not necessarily depend on the warp factor. 
-Nonetheless, the constraints (\ref{eq:halfwayconstraint}) and
-(\ref{eq:trapeziumlimit}) can be 
+Nonetheless, the constraints \eqref{eq:halfwayconstraint} and
+\eqref{eq:trapeziumlimit} can be 
 combined with \eq{eq:approxlyth-dbiintro} to derive a limit 
-on the tensor-scalar ratio in terms of the warp factor and the 
-kinetic function (\ref{eq:genaction-dbi}) and we find that  
+on the tensor-scalar ratio in terms of the warp factor and $P(X,\vp)$, and we find
+that 
 % 
 \begin{equation}
 \label{eq:LHbound}
@@ -777,6 +777,8 @@ r_* < \frac{10}{(\Delta \N)_*^2} \left( \frac{T_3}{\Vol} \right)^{1/3}
 \left( \frac{h_*}{\Mpl} \right)^{4/3} \left( c_s P_{,X} \right)_* \,.
 \end{equation}
 % 
+This bound is valid for any $P(X,\vp)$ in the warped throat including the
+generalised DBI function given in \eq{eq:genaction-dbi}.
 For a specific model where the warp factor and 
 the functions $f_i (\varphi )$ are determined by particle 
 physics considerations,   
