First go at DBI section.

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.4 2009/11/07 17:16:58 ith Exp $
+% $Id: theend.tex,v 1.5 2009/11/09 13:23:14 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.4 2009/11/07 17:16:58 ith Exp $}
+{\version$Id: theend.tex,v 1.5 2009/11/09 13:23:14 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -33,3 +33,54 @@ The main observable quantities are the power spectrum of scalar perturbations, i
 spectral index, and the ratio of tensor to scalar perturbations. In addition to
 these the degree of departure of the perturbations from purely Gaussian statistics
 was considered in the local and equilateral cases.
+
+
+\pagebreak
+
+In Part~\ref{part:dbi} of this thesis, analytic methods were used to constrain
+string theory inspired inflationary models. The Dirac-Born-Infeld scenario was
+outlined in Chapter~\ref{ch:dbi-intro}. In this model, a D3-brane propagates in a
+six-dimensional warped throat. The radial position of the brane from the tip of the
+throat assumes the role of the inflaton field. The non-canonical nature of the DBI
+action restricts the kinetic energy of this field no matter how steep the potential
+which enables an inflationary period of sufficient duration to occur.
+This model was widely regarded as a very promising implementation of an inflationary
+model in a string-theory context[cite***].
+
+In \Rref{bmpaper}, Baumann and McAllister used the Lyth bound \cite{lyth} to limit
+the tensor-scalar ratio based on the conservative assumption that the brane could
+not propogate further than the full length of the throat. In Chapter~\ref{ch:dbi},
+we showed that this bound can be tightened by applying it over the
+portion of the throat which the brane passes through during the directly observable
+e-foldings of inflation. Restricting the field variation to be over these,
+approximately, four e-foldings constrains $r$ to be less than $10^{-7}$ for standard
+parameter values.
+
+The most optimistic estimates of advances in experimental techniques and data
+analysis, including foreground reduction, indicate that observations of $r>10^{-4}$
+might be achievable [cite CMBPOL etc]. Therefore, this new bound in
+\eq{eq:upperbound} immediately rules out the observation of a tensor mode signal
+from this model in the foreseeable future.
+
+In addition to this, we also derived a lower bound on $r$ in \eq{eq:lowerbound}.
+This depends on observable quantities, namely the scalar spectral index and the
+equilateral non-gaussianity. Saturating the WMAP5 observational limit on $\fnleq$
+and taking the best fit value for $n_s$, we found that the most conservative lower
+limit is $r>0.005$. This is clearly incompatible with the previously derived upper
+bound. Therefore, for standard parameter values, the D3-brane DBI scenario is not
+viable. 
+
+In Section~\ref{sec:relaxing-dbi}, a phenomenological approach was taken to easing
+the upper bound. By considering a DBI action with unspecified field functions,
+$f_i$, we showed that the generalised lower and upper bounds can be consistent
+if the product of $f_1$ and $f_2$ is large on observable scales.
+
+The discovery of the inconsistent bounds for DBI inflation has had a noticeable
+impact on the research community, spurring interest in finding models which evade
+these bounds. Many such models have been proposed with varying degrees of success. In
+Section~\ref{sec:others-dbi} these were categorised according to whether they
+featured single or multiple fields and single or multiple branes. 
+
+
+One such ...
+
