Continued work on multi brane section.

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.5 2009/11/09 13:23:14 ith Exp $
+% $Id: theend.tex,v 1.6 2009/11/09 16:44:08 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.5 2009/11/09 13:23:14 ith Exp $}
+{\version$Id: theend.tex,v 1.6 2009/11/09 16:44:08 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -45,7 +45,7 @@ throat assumes the role of the inflaton field. The non-canonical nature of the D
 action restricts the kinetic energy of this field no matter how steep the potential
 which enables an inflationary period of sufficient duration to occur.
 This model was widely regarded as a very promising implementation of an inflationary
-model in a string-theory context[cite***].
+model in a string-theory context.
 
 In \Rref{bmpaper}, Baumann and McAllister used the Lyth bound \cite{lyth} to limit
 the tensor-scalar ratio based on the conservative assumption that the brane could
@@ -58,7 +58,7 @@ parameter values.
 
 The most optimistic estimates of advances in experimental techniques and data
 analysis, including foreground reduction, indicate that observations of $r>10^{-4}$
-might be achievable [cite CMBPOL etc]. Therefore, this new bound in
+might be achievable \cite{Baumann:2008aq,vpj}. Therefore, the new bound in
 \eq{eq:upperbound} immediately rules out the observation of a tensor mode signal
 from this model in the foreseeable future.
 
@@ -68,12 +68,9 @@ equilateral non-gaussianity. Saturating the WMAP5 observational limit on $\fnleq
 and taking the best fit value for $n_s$, we found that the most conservative lower
 limit is $r>0.005$. This is clearly incompatible with the previously derived upper
 bound. Therefore, for standard parameter values, the D3-brane DBI scenario is not
-viable. 
-
-In Section~\ref{sec:relaxing-dbi}, a phenomenological approach was taken to easing
-the upper bound. By considering a DBI action with unspecified field functions,
-$f_i$, we showed that the generalised lower and upper bounds can be consistent
-if the product of $f_1$ and $f_2$ is large on observable scales.
+viable. Numerical simulations by Peiris \etal in \Rref{Peiris:2007gz} have
+demonstrated the lower bound using the
+Hamiltonian flow approach and the relativistic limit.
 
 The discovery of the inconsistent bounds for DBI inflation has had a noticeable
 impact on the research community, spurring interest in finding models which evade
@@ -81,6 +78,57 @@ these bounds. Many such models have been proposed with varying degrees of succes
 Section~\ref{sec:others-dbi} these were categorised according to whether they
 featured single or multiple fields and single or multiple branes. 
 
+In Section~\ref{sec:relaxing-dbi}, a phenomenological approach was taken to easing
+the upper bound. By considering a DBI action with unspecified field functions,
+$f_i$, we showed that the generalised lower and upper bounds can be consistent
+if the product of $f_1$ and $f_2$ is large on observable scales.
 
-One such ...
+
+% Multi
+More general actions which relax the bounds were derived in
+Chapter~\ref{ch:multibrane}. By retaining the proportionality of $\Lambda$ and
+$c_s^{-2}$, which is present in the DBI model, and requiring that $\fnleq$ is large,
+we found a class of actions similar in form to DBI. 
+Instead of a square-root in the kinetic term, the index of the central term of these
+actions depends on the constant of proportionality between $\Lambda$ and the sound
+speed.
+The upper bound on $r$ can be derived for these general actions and when the index
+is below the critical value of $1/2$ of the standard DBI scenario, this bound is
+significantly relaxed. When new models are proposed the
+phenomenological description of this family of actions allows easy identification of
+those models for which the bound on $r$ is less stringent. 
+
+One proposed, multi brane, single field model is the coincident brane scenario of
+Thomas \& Ward \cite{thomasward}. When $n$ D3-branes propogate in a throat, the
+non-Abelian interactions between the branes result in major departures from the
+single brane case. This is in contrast to the non-interacting branes model in which
+the total action is simply the sum of copies of the single brane action.
+
+In the limit of a large number of branes being coincident, the effective action is
+similar to $n$ times the single brane one with the addition of a fuzzy potential
+term. The bounds on $r$ can be somewhat relaxed when this potential term is large
+but this model is still strongly constrained by current observations. For an $AdS_5$
+throat, standard parameter choices limit the number of branes in this case to being
+less than 150, at which point the assumption of arbitrarily large $n$ is
+questionable.
+
+More promising is the finite $n$ limit of the coincident brane model. The
+non-Abelian nature of the interactions leads in this case to a recursive definition
+of the $n$-brane action in terms of the $n=2$ one. In
+Section~\ref{sec:finiten-multi} we showed that the action for finite $n$ is one of
+the class of bound-evading actions described above. This identification is possible
+because the last term of the recursive sum dominates in the relativistic limit. This
+approximation is valid at least when $n<10$. The backreaction of the multiple
+branes is kept well under control for this range of $n$.
+
+Although the bounds on $r$ are eased
+for this model, we showed that observations strongly constrain the possibility of
+production of an observable tensor signal. If an observable tensor-scalar ratio is
+considered to be $r>10{-4}$ then only the two or three brane cases are capable of
+producing such a signal. This bound on $n$ depends on the WMAP5 limit on $\fnleq$.
+If, as expected, the observational limits on $\fnleq$ tighten considerably in the
+future, the possibility of an observable tensor signal from the multi coincident
+brane model could be ruled out.
+
+
 
