Changed to using \Delta \N.

--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.27 2009/11/07 13:21:34 ith Exp $
+% $Id: perts.tex,v 1.28 2009/11/09 18:16:00 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.27 2009/11/07 13:21:34 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.28 2009/11/09 18:16:00 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -63,7 +63,7 @@ non-Gaussianity.
 The first uses nonlinear theory and a gradient expansion in various
 forms, either explicitly, \eg
 Refs.~\cite{Salopek:1990jq,Rigopoulos:2005xx}, or through the
-$\Delta N$ formalism, \eg
+$\Delta \N$ formalism, \eg
 Refs.~\cite{Starobinsky:1982ee,
 Starobinsky:1986fxa, Sasaki:1995aw, Sasaki:1998ug,
 Lyth:2004gb,Lyth:2005fi,Langlois:2006vv}.
@@ -82,7 +82,7 @@ second approach uses cosmological perturbation theory developed by Bardeen
 issues see Ref.~\cite{Malik:2008im}.}
 %
 This approach works on all scales, but can be more complex in comparison to the
-$\Delta N$ formalism. The two methods lead to identical results on large scales
+$\Delta \N$ formalism. The two methods lead to identical results on large scales
 \cite{Malik:2005cy}. We
 will follow the Bardeen approach here.
 
